--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "nyc": "^13.1.0"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "cors": "^2.8.5"
+    "@babel/plugin-proposal-class-properties": "^7.1.0"
   }
 }
