--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://it2810-46.idi.ntnu.no/prosjekt4/",
-  "name": "it2810-webutvikling-h18-prosjekt-4-gruppe--46",
+  "homepage": "htttp://asmundhaugse.no",
+  "name": "Queries to a database containing 18,000+ Vinmonopolet products",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
