--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.stud.idi.ntnu.no:it2810-h18/prosjekt3/gruppe46.git"
+    "url": "https://github.com/asmundh/vinmonopolet"
   },
   "author": "ViktorGSolberg, Magssch, asmundh",
   "license": "ISC",
