Fix vuln issues

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "homepage": "htttp://asmundhaugse.no",
-  "name": "Queries to a database containing 18,000+ Vinmonopolet products",
+  "name": "vinmonopolet-db",
+  "description": "Queries to a database containing 18,000+ Vinmonopolet products",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +15,7 @@
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.0",
     "react-responsive-modal": "^3.5.1",
-    "react-scripts": "2.0.5",
+    "react-scripts": "^3.0.1",
     "react-semantic-ui": "^0.2.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
