--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "author": "asmundh",
   "license": "ISC",
   "scripts": {
-    "webserver": "NODE_ENV=mongodb://it2810-46.idi.ntnu.no:27017/prosjekt4 nodemon --exec babel-node src",
+    "webserver": "nodemon --exec babel-node src",
     "test": "NODE_ENV=mongodb://it2810-46.idi.ntnu.no:27017/test nyc mocha --exit --compilers js:@babel/register --timeout 10000 ",
     "start": "node src",
     "build": "babel src -d dist"
@@ -38,6 +38,6 @@
     "chai-http": "^4.2.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.4",
-    "nyc": "^13.1.0"
+    "nyc": "^14.1.1"
   }
 }
