--- a/server/.env
+++ b/server/.env
@@ -2,6 +2,7 @@ MONGODB_URI=mongodb://localhost:27017/prosjekt4
 MONGODB_IDI_URI=mongodb://it2810-46.idi.ntnu.no:27017/prosjekt4
 MONGODB_MLAB_URI=mongodb://smund:smund@ds145053.mlab.com:45053/weboving4
 test=mongodb://it2810-46.idi.ntnu.no:27017/prosjekt4test
+LOCAL_DB=mongodb://localhost:27017/Vinmonopolet
 DB_PASS=smund
 DB_USER=smund
 PORT=8000
